--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.11.3",
 		"express": "^5.1.0",
+		"mwn": "^3.0.1",
 		"node-fetch": "^3.3.2"
 	},
 	"devDependencies": {
